syntax = "proto3";

package booking.v1;

option go_package = "github.com/golang_falcon_task/proto/booking-service/v1";

// Booking definition, specific to BookingService
message Booking {
  int32 booking_id = 1;
  int32 user_id = 2;
  int32 ride_id = 3;
  string time = 4; // Timestamp of the booking
}

// Ride definition, embedded for convenience
message Ride {
  int32 ride_id = 1;
  string source = 2;
  string destination = 3;
  int32 distance = 4;  // Distance in kilometers
  int32 cost = 5;      // Cost in currency units
}

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc GetBooking(GetBookingRequest) returns (GetBookingResponse);
}

message CreateBookingRequest {
  int32 user_id = 1;
  Ride ride = 2; // Ride is defined within BookingService
}

message CreateBookingResponse {
  Booking booking = 1; // Reference Booking within BookingService
}

message GetBookingRequest {
  int32 booking_id = 1;
}

message GetBookingResponse {
  string name = 1;
  string source = 2;
  string destination = 3;
  int32 distance = 4;
  int32 cost = 5;
  string time = 6;
}
